Handle wildcard parameter in Connector list API (#419)